- Inserito controllo uuid e ip - Aggiornata la versione del plugin