@@ -3,9 +3,9 @@ package me.siryq.premiumautologin;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
 import org.bukkit.event.player.AsyncPlayerPreLoginEvent;
-
+import org.bukkit.event.player.PlayerQuitEvent;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 
@@ -17,40 +17,78 @@ public class PremiumLoginListener implements Listener {
         return verifiedPremiumPlayers.contains(name.toLowerCase());
     }
 
+    public static void addVerified(String name) {
+        verifiedPremiumPlayers.add(name.toLowerCase());
+    }
+
     public static void removeVerified(String name) {
         verifiedPremiumPlayers.remove(name.toLowerCase());
     }
 
+    // ==========================
+    // AsyncPlayerPreLoginEvent
+    // ==========================
     @EventHandler
     public void onAsyncPreLogin(AsyncPlayerPreLoginEvent event) {
 
         String name = event.getName();
+        String ip = event.getAddress().getHostAddress();
 
-        if (!PremiumAutoLogin.getInstance().isPremium(name)) {
-            return; // giocatore SP normale
-        }
+        if (!PremiumAutoLogin.getInstance().isPremium(name)) return;
 
         try {
-            String url = "https://api.mojang.com/users/profiles/minecraft/" + name;
-            HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
+            URI uri = URI.create("https://api.mojang.com/users/profiles/minecraft/" + name);
+            HttpURLConnection connection = (HttpURLConnection) uri.toURL().openConnection();
+
             connection.setRequestMethod("GET");
             connection.setConnectTimeout(3000);
 
             if (connection.getResponseCode() == 200) {
-                verifiedPremiumPlayers.add(name.toLowerCase());
-                PremiumAutoLogin.getInstance().getLogger().info(name + " verificato come premium.");
+
+                String savedIP = PremiumAutoLogin.getInstance().getLastIP(name);
+
+                // Primo login o stesso IP
+                if (savedIP == null || savedIP.equals(ip)) {
+
+                    PremiumAutoLogin.getInstance().setLastIP(name, ip);
+                    addVerified(name);
+
+                    PremiumAutoLogin.getInstance().logDebug(
+                            name + " verificato premium con IP: " + ip
+                    );
+
+                } else {
+
+                    // IP diverso → probabilmente TLauncher
+                    event.disallow(
+                            AsyncPlayerPreLoginEvent.Result.KICK_OTHER,
+                            PremiumAutoLogin.getInstance()
+                                    .getMessageAsComponent("premium-invalid")
+                    );
+                }
+
             } else {
                 event.disallow(
                         AsyncPlayerPreLoginEvent.Result.KICK_OTHER,
-                        PremiumAutoLogin.getInstance().getMessageAsComponent("premium-invalid")
+                        PremiumAutoLogin.getInstance()
+                                .getMessageAsComponent("premium-invalid")
                 );
             }
 
         } catch (Exception e) {
             event.disallow(
                     AsyncPlayerPreLoginEvent.Result.KICK_OTHER,
-                    PremiumAutoLogin.getInstance().getMessageAsComponent("mojang-error")
+                    PremiumAutoLogin.getInstance()
+                            .getMessageAsComponent("mojang-error")
             );
         }
+    }
+
+    // ==========================
+    // Pulizia cache quando il giocatore esce
+    // ==========================
+    @EventHandler
+    public void onPlayerQuit(PlayerQuitEvent event) {
+        PremiumLoginListener.removeVerified(event.getPlayer().getName());
     }
 }
